AC_INIT(src/main.cpp)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(AstroAttack, 0.1.0)

AC_PROG_CXX
AC_LANG(C++)

AC_PROG_INSTALL

AC_SEARCH_LIBS(SDL_Init, SDL, [], [AC_MSG_ERROR("SDL required!")])
AC_SEARCH_LIBS(ftglGetFontError, ftgl, [], [AC_MSG_ERROR("FTGL required!")])
AC_SEARCH_LIBS(b2_version, Box2D, [], [AC_MSG_ERROR("Box2D required!")])
AC_SEARCH_LIBS(Mix_OpenAudio, SDL_mixer, [], [AC_MSG_ERROR("SDL_mixer required!")])
AC_SEARCH_LIBS(glViewport, GL, [], [AC_MSG_ERROR("OpenGL required!")])
AC_SEARCH_LIBS(gluBuild2DMipmaps, GLU, [], [AC_MSG_ERROR("OpenGL Utility Library (libGLU) required!")])
AC_SEARCH_LIBS(ilInit, IL, [], [AC_MSG_ERROR("DevIL (libIL) required!")])
AC_SEARCH_LIBS(iluInit, ILU, [], [AC_MSG_ERROR("DevIL (libILU) required!")])
AC_CHECK_HEADER(boost/shared_ptr.hpp, [], [AC_MSG_ERROR("boost/shared_ptr.hpp required!")] )
AC_CHECK_HEADER(boost/scoped_ptr.hpp, [], [AC_MSG_ERROR("boost/scoped_ptr.hpp required!")] )
AC_CHECK_HEADER(boost/bind.hpp, [], [AC_MSG_ERROR("boost/bind.hpp required!")] )

AC_OUTPUT(Makefile src/Makefile)
