bin_PROGRAMS = AstroAttack

AstroAttack_SOURCES = CameraController.cpp Component.cpp Configuration.cpp \
	Entity.cpp Event.cpp Font.cpp GameApp.cpp \
	GameStates.cpp GUI.cpp Input.cpp \
	Logger.cpp main.cpp OsMsgBox.cpp Physics.cpp \
	Renderer.cpp Sound.cpp Texture.cpp Vector2D.cpp \
	World.cpp XmlLoader.cpp \
    components/CompGravField.cpp components/CompPhysics.cpp \
    components/CompPlayerController.cpp components/CompPosition.cpp \
    components/CompShape.cpp components/CompTrigger_Conditions.cpp \
	components/CompTrigger.cpp components/CompTrigger_Effects.cpp \
	components/CompVisualAnimation.cpp \
	components/CompVisualMessage.cpp components/CompVisualTexture.cpp \
	states/EditorState.cpp \
	states/GameOverState.cpp states/MainMenuState.cpp \
	states/PlayingState.cpp states/SlideShowState.cpp \
	contrib/pugixml/pugixml.cpp
	
AstroAttack_CPPFLAGS = -I /usr/include/SDL
